# metabench

./: .appveyor.yml  .travis.yml  CMakeLists.txt  index.html  metabench.cmake
_hetero/clang++-3.6/at/: fusion.list.json  fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html  std.tuple.json
_hetero/clang++-3.6/at_key/: fusion.map.json  hana.map.json  hana.tuple.json  index.html
_hetero/clang++-3.6/cartesian_product/: hana.tuple.json  index.html
_hetero/clang++-3.6/count_if/: fusion.list.json  fusion.vector.json  hana.tuple.json  index.html
_hetero/clang++-3.6/difference/: hana.set.json  index.html
_hetero/clang++-3.6/filter/: fusion.list.json  fusion.vector.json  hana.tuple.json  index.html  tmp.pack.json
_hetero/clang++-3.6/find_if/: fusion.list.json  fusion.vector.json  hana.map.json  hana.set.json  hana.tuple.json  index.html  tmp.pack.json
_hetero/clang++-3.6/fold_left/: fusion.list.json  fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html
_hetero/clang++-3.6/fold_right/: fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html
_hetero/clang++-3.6/insert/: hana.map.json  hana.set.json  index.html
_hetero/clang++-3.6/intersection/: hana.set.json  index.html
_hetero/clang++-3.6/is_disjoint/: hana.map.json  hana.set.json  hana.tuple.json  index.html
_hetero/clang++-3.6/is_subset/: hana.map.json  hana.set.json  hana.tuple.json  index.html
_hetero/clang++-3.6/lexicographical_compare/: hana.tuple.json  index.html
_hetero/clang++-3.6/make/: fusion.list.json  fusion.map.json  fusion.set.json  fusion.vector.json  hana.basic_tuple.json  hana.map.json  hana.set.json  hana.tuple.json  index.html  std.array.json  std.tuple.json  tmp.pack.json
_hetero/clang++-3.6/partition/: hana.tuple.json  index.html
_hetero/clang++-3.6/sort/: hana.tuple.json  index.html
_hetero/clang++-3.6/symmetric_difference/: hana.set.json  index.html
_hetero/clang++-3.6/transform/: fusion.list.json  fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html
_hetero/clang++-3.6/union/: hana.set.json  index.html
_hetero/clang++-3.6/unpack/: fusion.list.json  fusion.vector.json  hana.basic_tuple.json  hana.set.json  hana.tuple.json  index.html
_hetero/clang++-3.7/at/: fusion.list.json  fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html  std.tuple.json
_hetero/clang++-3.7/at_key/: fusion.map.json  hana.map.json  hana.tuple.json  index.html
_hetero/clang++-3.7/cartesian_product/: hana.tuple.json  index.html
_hetero/clang++-3.7/count_if/: fusion.list.json  fusion.vector.json  hana.tuple.json  index.html
_hetero/clang++-3.7/difference/: hana.set.json  index.html
_hetero/clang++-3.7/filter/: fusion.list.json  fusion.vector.json  hana.tuple.json  index.html  tmp.pack.json
_hetero/clang++-3.7/find_if/: fusion.list.json  fusion.vector.json  hana.map.json  hana.set.json  hana.tuple.json  index.html  tmp.pack.json
_hetero/clang++-3.7/fold_left/: fusion.list.json  fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html
_hetero/clang++-3.7/fold_right/: fusion.vector.json  hana.basic_tuple.json  hana.tuple.json  index.html
_hetero/clang++-3.7/insert/: hana.map.json  hana.set.json  index.html
_hetero/clang++-3.7/intersection/: hana.set.json  index.html
_hetero/clang++-3.7/is_disjoint/: hana.map.json  hana.set.json  hana.tuple.json  index.html
_hetero/clang++-3.7/is_subset/: hana.map.json  hana.set.json  hana.tuple.json  index.html
_hetero/clang++-3.7/lexicographical_compare/: hana.tuple.json  index.html
_hetero/clang++-3.7/make/: fusion.list.json  fusion.map.json  fusion.set.json  fusion.vector.json  hana.basic_tuple.json  hana.map.json  hana.set.json  hana.tuple.json  index.html  std.array.json  std.tuple.json  tmp.pack.json
_hetero/clang++-3.7/partition/: hana.tuple.json  index.html
benchmark/: CMakeLists.txt
benchmark/dependencies/: brigand.cmake  fusion.cmake  hana.cmake  kvasir.cmake  meta.cmake  metal.cmake  mpl.cmake  std.cmake
benchmark/hetero/at/: CMakeLists.txt
benchmark/hetero/count_if/: CMakeLists.txt  hana.tuple.base.cpp.erb
benchmark/hetero/make/: CMakeLists.txt
benchmark/hetero/transform/: CMakeLists.txt
benchmark/type/all/: CMakeLists.txt  kvasir.list.cpp.erb
benchmark/type/any/: CMakeLists.txt  kvasir.list.cpp.erb
benchmark/type/at/: CMakeLists.txt  brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/count_if/: brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/filter/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/find_if/: brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/fold_left/: brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/fold_right/: brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/insert/: metal.list.cpp.erb
benchmark/type/make/: CMakeLists.txt  brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/partition/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/replace_if/: brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/reverse/: CMakeLists.txt  brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/transform/: CMakeLists.txt  brigand.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
example/: CMakeLists.txt
test/: CMakeLists.txt
test/add_dataset_base_dataset/: CMakeLists.txt
test/add_dataset_base_dataset_different_ranges/: CMakeLists.txt
(+2700 files in other folders)
